--- a/settings/templates/tracking.html
+++ b/settings/templates/tracking.html
@@ -5,7 +5,7 @@
         <script>
 
             var config = {};
-            #django has builtin encoder-filter
+            //django has builtin encoder-filter
             {% for key, value in request.POST.items %}
                 config['{% encode_string key %}'] = '{% encode_string value %}';
             {% endfor %}
