Solution to Ex4.2 - 2 Reflected Client-Side XSS URL Exploitation for Injection -Fixed DOM linebreak HTML

--- a/settings/templates/settings.html
+++ b/settings/templates/settings.html
@@ -33,7 +33,7 @@
                 ad2.class = "border border-dark";
 
                 document.body.appendChild(ad1);
-                document.body.appendChild("<br>");
+                document.body.appendChild(document.createElement("br"));
                 document.body.appendChild(ad2);
 
 
