Solution to Ex4.3 Persistent Client-Side XSS -added checks for only valid language selection

--- a/settings/templates/settings.html
+++ b/settings/templates/settings.html
@@ -164,7 +164,10 @@
 
         if (location.hash.slice(1) !== "") {
             if (location.hash.slice(1).indexOf("setlang=") === 0) {
-                change_language(location.hash.slice(9));
+                var lang = location.hash.slice(9);
+                if(["","en","ru","de"].includes(lang)){
+                    change_language(lang);
+                }
             }
         }
 
